--- a/confs/tyk.conf
+++ b/confs/tyk.conf
@@ -1,7 +1,7 @@
 {
   "listen_address": "",
   "listen_port": 8080,
-  "secret": "352d20ee67be67f6340b4c0605b044b7",
+  "secret": "Zls7rrBtx7hwDfk2G6rSJUskBZc31D8I",
   "node_secret": "352d20ee67be67f6340b4c0605b044b7",
   "template_path": "./templates",
   "tyk_js_path": "./js/tyk.js",
@@ -50,8 +50,8 @@
     }
   },
   "health_check": {
-    "enable_health_checks": false,
-    "health_check_value_timeouts": 0
+    "enable_health_checks": true,
+    "health_check_value_timeouts": 60
   },
   "optimisations_use_async_session_write": true,
   "allow_master_keys": false,
@@ -166,6 +166,9 @@
   "public_key_path": "",
   "close_idle_connections": false,
   "allow_remote_config": true,
-  "enable_bundle_downloader": false,
-  "max_idle_connections_per_host": 500
+  "enable_bundle_downloader": true,
+  "bundle_base_url": "http://host.docker.internal:8000/",
+  "max_idle_connections_per_host": 500,
+  "enable_jvsm": true,
+  "enable_hashed_keys_listing": true
 }
